--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,19 +51,19 @@ jobs:
     - name: tag
       shell: bash
       run: |
-        podman tag buildoutput:latest ghcr.io/bigpod98/bigpodsb/alpha-${{ matrix.image_flavor }}:${{ matrix.major_version }}
+        podman tag buildoutput:latest ghcr.io/bigpodsb/alpha-${{ matrix.image_flavor }}:${{ matrix.major_version }}
     - name: tag40aslatest
       shell: bash
       if: matrix.major_version == 41
       run: |
-        podman tag buildoutput:latest ghcr.io/bigpod98/bigpodsb/alpha-${{ matrix.image_flavor }}:latest
+        podman tag buildoutput:latest ghcr.io/bigpodsb/alpha-${{ matrix.image_flavor }}:latest
     - name: login
       shell: bash
       run: podman login ghcr.io -u bigpod98 -p ${{ secrets.GITHUB_TOKEN }}
     - name: push
       shell: bash
-      run: podman push ghcr.io/bigpod98/bigpodsb/alpha-${{ matrix.image_flavor }}:${{ matrix.major_version }}
+      run: podman push ghcr.io/bigpodsb/alpha-${{ matrix.image_flavor }}:${{ matrix.major_version }}
     - name: pushlatest
       if: matrix.major_version == 41
       shell: bash
-      run: podman push ghcr.io/bigpod98/bigpodsb/alpha-${{ matrix.image_flavor }}:latest
+      run: podman push ghcr.io/bigpodsb/alpha-${{ matrix.image_flavor }}:latest
