--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         image_flavor: [main, nvidia]
-        major_version: [42192111192]
+        major_version: [42]
         #exclude: 
         #  - image_flavor: nvidia
         #    major_version: 38
